@@ -1,0 +1,6 @@
+
+library(anytime)
+
+assertDate(c("2001/02/03", "2001-02-03", "20010203"))
+
+assertTime(c("2001/02/03 04:05:06", "2001-02-03  04:05:06", "20010203 040506"))
